
Sole focus will be on fixing bugs and polish existing features and clean codebase.

Added:
* Article now can be marked (upon selection) as read with delay or only manually. (#1017)
* All RSS Guard plugins/services are now placed in their own library (DLL/SO/DYLIB) files and are loaded by main RSS Guard library dynamically. This means that unused services can now be removed from RSS Guard installation if not used by the user. Also it allows for a cleaner and slimmer common codebase. Refactoring of main RSS Guard library was also done and it is now more usable as regular dynamic-link library. I expect some regressions as this was HUGE change. Also, this change allows new potential interested people in writing new plugins easier as they now can just copy one of existing plugins and tweak for new service.
* Application (Qt) style and icon theme now can be properly set to respect system style/icons and this setting is dynamic, meaning if you change system theme and restart RSS Guard, new theme is honored. (#1352)
* Button to copy system/app information to "About..." dialog. (#1318)
* All modal dialogs now remember their sizes forever. (#1336)

Fixed:
* Removed debugging forgotten code. (#1354)
* "Cleanup" button in downloader was greyed out when it should not be. (#1350)
* App crashes when changing notification sound. (#1317)
* Built-in user-agent was updated. You can also supply your own user-agent, see `rssguard.exe --help` for more info.

4.6.6
-----

Fixed:
* Some build problems and regressions are now fixed, sorry for this.

4.6.4
-----

One bigger new thing, dear users: I decided to start implementing brand new purely command line only version of RSS Guard to allow running RSS Guard in headless/CLI environments like servers. It will likely work like this:
1. You run regular variant of RSS Guard and setup your feeds, how often they fetch like you normally do when running classic GUI RSS Guard.